<resources>
    <string name="app_name">OurDuty</string>
    <string name="today_name">TODAY:</string>
    <string name="welcome_to_the_app">Welcome to the \n OurDuty v.1.2.0.1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_problem">Internet problem. Check your connection</string>
    <string name="getting_classes_failure">Failed to restore classes. Check your internet connection</string>
    <string name="change_show_options_failed">Failed to update data. Check your internet connection</string>
    <string name="copied_to_clipboard_text">Copied to clipboard</string>
    <string name="is_on_duty_today"> is on duty today.</string>
    <string name="was_not_on_duty_yet"> was not on duty yet.</string>
    <string name="was_on_duty_on"> was on duty on </string>
    <string name="followed">Followed</string>
    <string name="users">Users</string>
    <string name="your_classes">Your classes</string>
    <string name="editing">Editing…</string>
    <string name="followers">Followers</string>
    <string name="s_classes">\'s classes</string>
    <string name="debts">Debts:</string>
    <string name="past_duties">Past duties:</string>
    <string name="last_duty">Last duty:</string>
    <string name="unpin_failed">Unpin failed. Check your internet connection</string>
    <string name="pair_is_currently_on_duty">Pair is currently on duty</string>
    <string name="class_name">Class name:</string>
    <string name="elder">Elder:</string>
    <string name="grade">Grade:</string>
    <string name="on_duty">On duty:</string>
    <string name="past_d">Past d.</string>
    <string name="save">Save</string>
    <string name="show_to_others">Show to others:</string>
    <string name="name">Name</string>
    <string name="set_duty">Set duty</string>
    <string name="skip">Skip</string>
    <string name="info">Info</string>
    <string name="show">Show</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="grade_no_dots">Grade</string>
    <string name="bio">Bio</string>
    <string name="contacts">Contacts</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="classes">Classes</string>
    <string name="new_class">New Class</string>
    <string name="my_classes">My Classes</string>
    <string name="people">People</string>
    <string name="find_people">Find People</string>
    <string name="clear_all_debts">Clear all debts</string>
    <string name="clear_all_past_duties">Clear all past duties</string>
    <string name="clear_all_pairs_history">Clear all pairs history</string>
    <string name="clear_all_pairs">Clear all pairs</string>
    <string name="delete_class">Delete class</string>
    <string name="sure_leave_changes_lost">Are you sure you want to leave? All the changes will be lost.</string>
    <string name="sure_clear_debts">Are you sure you want to clear every pair\'s debts?</string>
    <string name="sure_clear_duties">Are you sure you want to clear every pair\'s past duties?</string>
    <string name="sure_every_pair_events_clear">Are you sure you want to clear every pair\'s history? This cannot be reverted.</string>
    <string name="sure_delete_all_pairs">Are you sure you want to delete all pairs?</string>
    <string name="sure_delete_this_class">Are you sure you want to delete this class?</string>
    <string name="sure_delete_event_history">Are you sure you want to delete event history of selected pair?</string>
    <string name="class_can_be_pinned">Class can be pinned again</string>
    <string name="unpin_this_class">Unpin this class?</string>
    <string name="delete_event_history">Delete event history?</string>
    <string name="clear_all_debts_title">Clear all debts?</string>
    <string name="clear_all_duties">Clear all duties?</string>
    <string name="clear_all_event_histories">Clear all event histories?</string>
    <string name="delete_all_pairs">Delete all pairs?</string>
    <string name="delete_this_class">Delete this class?</string>
    <string name="delete_this_pair">Delete this pair?</string>
    <string name="pair_was_not_on_duty_yet">Pair was not on duty yet</string>
    <string name="pair_was_added">Pair was added</string>
    <string name="pair_was_skipped">Pair was skipped</string>
    <string name="pair_was_on_duty">Pair was on duty</string>
    <string name="currently_on_duty_event">Pair is currently on duty</string>
    <string name="pair_was_set_on_duty">Pair was set on duty</string>
    <string name="pair_name_changed_to">Pair\'s name was changed to</string>
    <string name="delete_this_event">Delete this event?</string>
    <string name="sure_delete_event">Are you sure you want to delete event</string>
    <string name="debt">debt</string>
    <string name="sure_delete_account">Are you sure you want to delete your account?</string>
    <string name="delete_account">Delete account?</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="pick_your_grade">Pick your grade</string>
    <string name="pick_birthday">Pick your birthday date</string>
    <string name="failed_save_on_cloud_connection">Failed to save data on cloud. Check your connection</string>
    <string name="failed_to_delete_account">Failed to delete account. Check your connection</string>
    <string name="class_is_unpinned">Class is unpinned</string>
    <string name="class_is_pinned">Class is pinned</string>
    <string name="engflag">🇬🇧</string>
    <string name="ukrflag">🇺🇦</string>
    <string name="rusflag">🇷🇺</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="night">Night</string>
    <string name="day">Day</string>
    <string name="moon">🌙</string>
    <string name="sun">☀</string>
    <string name="changes_applied_end_editing">Changes will be applied at the end of editing</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="follow_back">Follow Back</string>
    <string name="have_created_no_classes">You have created no classes yet</string>
    <string name="not_followed">You are not followed by anybody</string>
    <string name="not_following_anybody">You are not following anybody</string>
    <string name="no_users_found">No Users found</string>
    <string name="username_or_email">username or email</string>
    <string name="password">password</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account? Sign up!</string>
    <string name="login">Login</string>
    <string name="username_su">username*</string>
    <string name="email_su">email*</string>
    <string name="password_su">password*</string>
    <string name="confirm_password_su">confirm password*</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in!</string>
    <string name="create_an_account">Create an account!</string>
    <string name="create_an_account_but">Create an account</string>
    <string name="registration_is_succesful">Registration is successful</string>
    <string name="field_must_be_email">This field must be an email</string>
    <string name="field_not_be_empty">This field must not be empty</string>
    <string name="username_is_taken">This username is already used</string>
    <string name="email_is_taken">This email is already used</string>
    <string name="password_is_short">Password must contain at least 8 symbols</string>
    <string name="failed_registration">Registration is failed</string>
    <string name="login_is_successful">Login is successful</string>
    <string name="login_is_failed">Login is failed</string>
    <string name="username_is_not_registered">This username is not registered</string>
    <string name="password_empty">Password must not be empty</string>
    <string name="ass">as</string>
    <string name="log_out">Log out</string>
    <string name="delete_account_option">Delete account</string>
    <string name="own_classes">Own Classes</string>
    <string name="pinned_classes">Pinned classes</string>
    <string name="search_people_bar">Search people</string>
    <string name="not_following">Not Following</string>
    <string name="username_short">Username</string>
    <string name="birthday_short">Birthday</string>
    <string name="events">Events</string>
    <string name="nothing_happened_yet">Nothing happened yet</string>
    <string name="creating_new_class">Creating new class...</string>
    <string name="empty">empty</string>
    <string name="sure_want_to_delete">"Are you sure you want to delete "</string>
    <string name="whole_history_will_be_lost">" The whole pair's history will be lost."</string>
    <string name="new_class_name">New Class</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="december">December</string>
    <string name="november">November</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="rd">rd</string>
    <string name="th">th</string>
    <string name="nd">nd</string>
    <string name="st">st</string>
    <string name="of">of</string>
    <string name="password_confirmed_badly">Passwords are different</string>
    <string name="bio_hint">Write about yourself</string>
    <string name="username_hint">Write your username</string>
    <string name="birthday_hint">Choose your birthday</string>
    <string name="grade_hint">Choose your grade</string>
    <string name="mobile_hint">Write your phone number</string>

    <string-array name="languages">
        <item>Eng</item>
        <item>Укр</item>
        <item>Рус</item>
    </string-array>

    <string-array name="themes">
        <item>Night</item>
        <item>Day</item>
    </string-array>

</resources>