<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_profle_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_avatar" />

        <EditText
            android:id="@+id/user_username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/transparent_bg"
            android:lines="1"
            android:maxLength="20"
            android:hint="@string/username_hint"
            android:text="Your Username "
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/birthday_checkbox"
            app:layout_constraintStart_toEndOf="@+id/username_field"
            app:layout_constraintTop_toBottomOf="@+id/info_field" />

        <TextView
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_short"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/info_field"
            app:layout_constraintTop_toTopOf="@id/user_username_edit_text" />

        <TextView
            android:id="@+id/birthday_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_short"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/username_field"
            app:layout_constraintTop_toTopOf="@+id/user_settings_birthday_text" />

        <TextView
            android:id="@+id/grade_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade_no_dots"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_settings_grade_text"
            app:layout_constraintStart_toStartOf="@+id/birthday_field"
            app:layout_constraintTop_toTopOf="@+id/user_settings_grade_text" />

        <View
            android:id="@+id/divider_one"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_bio_edit_text" />

        <TextView
            android:id="@+id/bio_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_bio_edit_text"
            app:layout_constraintStart_toStartOf="@+id/grade_field"
            app:layout_constraintTop_toTopOf="@+id/user_bio_edit_text" />

        <EditText
            android:id="@+id/user_bio_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/transparent_bg"
            android:hint="@string/bio_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="64"
            android:singleLine="false"
            android:text="Your Bio"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_username_edit_text"
            app:layout_constraintStart_toStartOf="@+id/user_settings_birthday_text"
            app:layout_constraintTop_toBottomOf="@+id/user_settings_grade_text" />

        <TextView
            android:id="@+id/contacts_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/contacts"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_one" />

        <TextView
            android:id="@+id/mobile_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mobile"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/email_field"
            app:layout_constraintTop_toBottomOf="@+id/user_email_edit_text" />

        <TextView
            android:id="@+id/user_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_bg"
            android:inputType="textEmailAddress"
            android:maxLength="32"
            android:text="email@gmail.com"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_username_edit_text"
            app:layout_constraintStart_toStartOf="@+id/user_bio_edit_text"
            app:layout_constraintTop_toTopOf="@+id/email_field" />

        <TextView
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/contacts_field"
            app:layout_constraintTop_toBottomOf="@+id/contacts_field" />

        <EditText
            android:id="@+id/user_mobile_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_bg"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="13"
            android:hint="@string/mobile_hint"
            android:text="+380123456789"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_username_edit_text"
            app:layout_constraintStart_toStartOf="@id/user_email_edit_text"
            app:layout_constraintTop_toTopOf="@+id/mobile_field" />

        <TextView
            android:id="@+id/info_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/info"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

        <ImageButton
            android:id="@+id/choose_profile_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/round_button_bg"
            android:elevation="4dp"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintBottom_toBottomOf="@+id/user_profile_image"
            app:layout_constraintEnd_toEndOf="@+id/user_profile_image"
            app:layout_constraintStart_toStartOf="@+id/user_profile_image"
            app:layout_constraintTop_toTopOf="@+id/user_profile_image" />


        <TextView
            android:id="@+id/show_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/show"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/info_field"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/birthday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/user_settings_birthday_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_settings_birthday_text" />

        <CheckBox
            android:id="@+id/grade_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/user_settings_grade_text"
            app:layout_constraintEnd_toEndOf="@+id/birthday_checkbox"
            app:layout_constraintTop_toTopOf="@+id/user_settings_grade_text" />

        <CheckBox
            android:id="@+id/bio_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/user_bio_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/grade_checkbox"
            app:layout_constraintTop_toTopOf="@+id/user_bio_edit_text" />

        <CheckBox
            android:id="@+id/email_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@id/user_email_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/bio_checkbox"
            app:layout_constraintTop_toTopOf="@+id/user_email_edit_text" />

        <CheckBox
            android:id="@+id/mobile_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@id/user_mobile_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/email_checkbox"
            app:layout_constraintTop_toTopOf="@+id/user_mobile_edit_text" />

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:textColor="@color/textColorLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_settings_birthday_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/birthday_hint"
            android:text="Your Birthday"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_username_edit_text"
            app:layout_constraintStart_toStartOf="@+id/user_username_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/user_username_edit_text" />

        <TextView
            android:id="@+id/user_settings_grade_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/transparent_bg"
            android:hint="@string/grade_hint"
            android:text="Your Grade"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_username_edit_text"
            app:layout_constraintStart_toStartOf="@+id/user_settings_birthday_text"
            app:layout_constraintTop_toBottomOf="@+id/user_settings_birthday_text" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/action_bg"
            android:prompt="@string/language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_profile_image" />

        <Spinner
            android:id="@+id/theme_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/action_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_spinner" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/language"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/language_spinner"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image"
            app:layout_constraintTop_toTopOf="@+id/language_spinner" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/theme_spinner"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/theme_spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_settings_loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loading_bg"
        android:minWidth="240dp"
        android:visibility="visible"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>